<?xml version="1.0"?>
<package format="3">
  <name>giskardpy</name>
  <version>0.0.0</version>
  <description>The giskardpy package</description>

  <maintainer email="stelter@uni-bremen.de">Simon Stelter</maintainer>

  <license>LGPLv3</license>

  <url type="website">https://github.com/SemRoCo/giskardpy/wiki</url>

  <author email="stelter@uni-bremen.de">Simon Stelter</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>geometry2</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>giskard_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rqt_py_trees</exec_depend>

  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>python3-pykdl</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
